--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@google/generative-ai": "^0.17.0",
     "@react-native-voice/voice": "^3.2.4",
     "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "pg": "^8.12.0",
     "sih": "file:",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "spellchecker": "^3.7.1"
   }
 }
