--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "@google/generative-ai": "^0.17.0",
     "@react-native-voice/voice": "^3.2.4",
     "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "http": "^0.0.1-security",
+    "jsdom": "^25.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^8.12.0",
     "sih": "file:",
